--- a/js/lib/select/select.css
+++ b/js/lib/select/select.css
@@ -1,10 +1,10 @@
 .ui-select-trigger {
     display: inline-block;
     vertical-align: middle;
-    border: 1px solid #ddd;
+    border: 0;
     cursor: pointer;
     position: relative;
-    border-radius: 4px;
+    border-radius: .03rem /* 2/75 */;
 }
 
 .ui-select-trigger span {
@@ -17,7 +17,7 @@
 
 .ui-select-trigger.active {
     border-color: #ccc;
-    border-radius: 4px 4px 0 0;
+    border-radius: .05rem /* 4/75 */ .05rem /* 4/75 */ 0 0;
 }
 
 .ui-select-trigger.active i,
@@ -28,21 +28,21 @@
 .ui-select {
     position: absolute;
     display: none;
-    border: 1px solid #ccc;
-    min-height: 10px;
+    border: .01rem /* 1/75 */ solid #ccc;
+    min-height: .13rem /* 10/75 */;
     background-color: #fefefe;
     overflow-y: auto;
 }
 
 .ui-select-trigger i {
     position: absolute;
-    right: 5px;
+    right: .13rem /* 10/75 */;
     width: 0;
     height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 7px solid #ddd;
-    top: 5px;
+    border-left: .13rem /* 10/75 */ solid transparent;
+    border-right: .13rem /* 10/75 */ solid transparent;
+    border-top: .13rem /* 10/75 */ solid #999;
+    top: .13rem /* 10/75 */;
 }
 
 .ui-select-content {
@@ -53,7 +53,7 @@
 }
 
 .ui-select-content li {
-    padding: 0px 10px;
+    padding: 0rem /* 0/75 */ .13rem /* 10/75 */;
     overflow: hidden;
     word-break: break-all;
     line-height: 1.3;
