--- a/css/index.css
+++ b/css/index.css
@@ -9,14 +9,21 @@ html,body{
     -webkit-font-smoothing: antialiased;
 }
 .wp{
+    width: 100%;
     height: 100%;
     overflow: hidden; 
+    position: relative;
 }
 .page1{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0;
     background-image: url('../images/page1/bg-page1.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    position: relative;
+    -webkit-transition: all 1s ease-out 0s;
+    transition: all 1s ease-out 0s;
 }
 .page1-light{
     position: absolute;
@@ -52,7 +59,7 @@ html,body{
 }
 .arrow-down{
     position: absolute;
-    bottom: .27rem /* 20/75 */;
+    bottom: .53rem /* 40/75 */;
     left: 50%;
     margin-left: -.63rem /* 47/75 */;
     width: 1.25rem /* 94/75 */;
@@ -64,11 +71,17 @@ html,body{
 }
 
 .page2{
+    position: absolute;
+    top:100%;
+    width: 100%;
+    height: 100%;
     background-image: url('../images/page2/bg-page2.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     overflow: scroll !important;
-    position: relative;
+    -webkit-overflow-scrolling: touch;
+    -webkit-transition: all 1s ease-out 0s;
+    transition: all 1s ease-out 0s;
 }
 
 .form-text{
@@ -273,9 +286,12 @@ html,body{
 }
 
 .logo2{
-    margin-top: 5.12rem /* 384/75 */;
+    position: absolute;
+    bottom: .8rem /* 60/75 */;
+    left: 50%;
+    margin-left: -1.33rem /* 100/75 */;
     width: 2.67rem /* 200/75 */;
-	height: .63rem /* 47/75 */;
+    height: .63rem /* 47/75 */;
 }
 
 @-webkit-keyframes logo-anim {
