--- a/css/index.css
+++ b/css/index.css
@@ -83,7 +83,12 @@ html,body{
     -webkit-transition: all 1s ease-out 0s;
     transition: all 1s ease-out 0s;
 }
-
+.page2-content{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
 .form-text{
     background-image: url('../images/page2/bg-text.png');
     background-repeat: no-repeat;
@@ -211,14 +216,16 @@ html,body{
     color: #ffffff;
 }
 .confirm{
-    display: none;
     width: 7.47rem /* 560/75 */;
     height: 4.53rem /* 340/75 */;
     margin-top: 2.29rem /* 172/75 */;
     background-image: url('../images/page2/store-story.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    margin-bottom: .67rem /* 50/75 */
+    margin-bottom: .67rem /* 50/75 */;
+    transform: scale(0);
+    transition: all .5s ease 0s;
+
 }
 .confirm-header{
     line-height: 1.47rem /* 110/75 */;
@@ -287,7 +294,7 @@ html,body{
     font-size: .64rem /* 48/75 */;
 }
 .logo{
-    margin-top: 3.2rem /* 240/75 */;
+    margin-top: 18% /* 240/75 */;
     width: 2.8rem /* 210/75 */;
 	height: .8rem /* 60/75 */;
 }
@@ -299,6 +306,15 @@ html,body{
     margin-left: -1.33rem /* 100/75 */;
     width: 2.67rem /* 200/75 */;
     height: .63rem /* 47/75 */;
+}
+
+#result{
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 100%;
+    position: absolute;
+    transition: all 1s ease-out 0s;
 }
 
 @-webkit-keyframes logo-anim {
