--- a/css/index.css
+++ b/css/index.css
@@ -223,7 +223,9 @@ html,body{
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin-bottom: .67rem /* 50/75 */;
-    transform: scale(0);
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    -webkit-transition: all .5s ease 0s;
     transition: all .5s ease 0s;
 
 }
@@ -314,6 +316,7 @@ html,body{
     height: 100%;
     top: 100%;
     position: absolute;
+    -webkit-transition: all 1s ease-out 0s;
     transition: all 1s ease-out 0s;
 }
 
