--- a/css/index.css
+++ b/css/index.css
@@ -95,10 +95,10 @@ html,body{
     background-size: 100% 100%;
     overflow: hidden;
     width: 8.27rem /* 620/75 */;
-    height: 13.25rem /* 994/75 */;
+    height: 70vh;
 }
 .form-detail{
-    margin-top: 2.27rem /* 170/75 */;
+    margin-top: 11.8vh;
     width: 6.93rem /* 520/75 */;
     padding: .4rem /* 30/75 */ .2rem /* 15/75 */;
 }
@@ -111,7 +111,7 @@ html,body{
 }
 .form-input{
     width: 6.93rem /* 520/75 */;
-    height: 4rem /* 300/75 */;
+    height: 22.5vh;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
 	background-color: #f2f2f2;
@@ -120,7 +120,7 @@ html,body{
     font-size: .32rem /* 24/75 */;
     color: #333333;
     padding: .27rem /* 20/75 */;
-    margin-bottom: .53rem /* 40/75 */;
+    margin-bottom: 1vh;
 }
 .form-item{
     display: -webkit-box;
@@ -181,7 +181,7 @@ html,body{
     -webkit-appearance:none;
 }
 .submit{
-    margin-top: 1.07rem /* 80/75 */;
+    margin-top: .8rem /* 60/75 */;
     width: 7.33rem /* 550/75 */;
     height: 1.2rem /* 90/75 */;
     border-radius: .03rem /* 2/75 */;
@@ -236,6 +236,7 @@ html,body{
     text-align: center;
 }
 .confirm-footer{
+    font-size: .4rem /* 30/75 */;
     margin-top: .8rem /* 60/75 */;
     line-height: 1.2rem /* 90/75 */;
     color: #ffffff;
